@@ -8,7 +8,6 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin")
@@ -17,25 +16,23 @@ public class AdminController {
     @Autowired
     private UserRepository userRepository;
 
-    // 🧑‍💻 Afișează toți utilizatorii
     @GetMapping("/users")
     public String listUsers(Model model) {
-        List<User> allUsers = userRepository.findAll();
+        List<User> users = userRepository.findAll();
 
-        List<User> admins = allUsers.stream()
-                .filter(u -> "ADMIN".equals(u.getRole()))
-                .collect(Collectors.toList());
+        List<User> adminUsers = users.stream()
+                .filter(u -> "ADMIN".equalsIgnoreCase(u.getRole()))
+                .toList();
 
-        List<User> normalUsers = allUsers.stream()
-                .filter(u -> "USER".equals(u.getRole()))
-                .collect(Collectors.toList());
+        List<User> normalUsers = users.stream()
+                .filter(u -> "USER".equalsIgnoreCase(u.getRole()))
+                .toList();
 
-        model.addAttribute("admins", admins);
-        model.addAttribute("users", normalUsers);
+        model.addAttribute("adminUsers", adminUsers);
+        model.addAttribute("normalUsers", normalUsers);
         return "admin_users";
     }
 
-    // 📄 Vizualizare detalii user
     @GetMapping("/users/view/{id}")
     public String viewUserDetails(@PathVariable Long id, Model model) {
         User user = userRepository.findById(id).orElse(null);
@@ -46,22 +43,20 @@ public class AdminController {
         return "admin_user_details";
     }
 
-    // ✅ Activează / dezactivează cont
-    @PostMapping("/users/toggle/{id}")
-    public String toggleUserActive(@PathVariable Long id) {
+    @PostMapping("/users/deactivate/{id}")
+    public String toggleUserStatus(@PathVariable Long id) {
         User user = userRepository.findById(id).orElse(null);
-        if (user != null && !"ADMIN".equals(user.getRole())) {
+        if (user != null && !"ADMIN".equalsIgnoreCase(user.getRole())) {
             user.setActive(!user.isActive());
             userRepository.save(user);
         }
-        return "redirect:/admin/users";
+        return "redirect:/admin/users/view/" + id;
     }
 
-    // 🗑️ Șterge userul
     @PostMapping("/users/delete/{id}")
     public String deleteUser(@PathVariable Long id) {
         User user = userRepository.findById(id).orElse(null);
-        if (user != null && !"ADMIN".equals(user.getRole())) {
+        if (user != null && !"ADMIN".equalsIgnoreCase(user.getRole())) {
             userRepository.delete(user);
         }
         return "redirect:/admin/users";
